Fix link to Selenium download site

--- a/grid.html
+++ b/grid.html
@@ -129,7 +129,7 @@
  WebDriver, and legacy RC needed to run the grid.
  <em>ant</em> is not required anymore.
  You can download the <em>selenium-server-standalone-.jar</em> from
- <a href=//www.seleniumhq.org/download/>http://www.seleniumhq.org/download/</a>.
+ <a href=http://www.seleniumhq.org/download/>http://www.seleniumhq.org/download/</a>.
 
 
 <h4>Step 1: Start the ub</h4>
