Fixed various typos in Intro and Grid Pages

--- a/grid.html
+++ b/grid.html
@@ -31,7 +31,7 @@
 <p>Selenium Grid isn't a silver bullet.
  It solves a subset of common delegation and distribution problems,
  but will for example not manage your infrastructure
- and might not suite your specific needs.
+ and might not suit your specific needs.
 
 
 <h3>Pros</h3>
@@ -132,7 +132,7 @@
  <a href=http://www.seleniumhq.org/download/>http://www.seleniumhq.org/download/</a>.
 
 
-<h4>Step 1: Start the ub</h4>
+<h4>Step 1: Start the hub</h4>
 
 <p>The hub is the central point that will receive test requests
  and distribute them to the right nodes.
