--- a/wd.html
+++ b/wd.html
@@ -54,7 +54,7 @@
 <p>WebDriver's aim is to emulate a real user's interaction
  with the browser as closely as possible.
  This is possible at varying levels in different browsers.
- For more detalis on the different driver idiosyncracies,
+ For more details on the different driver idiosyncracies,
  please see <em><a href=drivers.html>Driver Idiosyncracies</a></em>.
 
 <p>Even though all the drivers share a single user-facing interface
@@ -184,7 +184,7 @@ Only local connections are allowed.</pre>
 <p>On Linux or macOS this means modifying
  the <var>PATH</var> environmental variable.
  You can see what directories, separated by a colon,
- that makes up your system's path by executing the following command:
+ makes up your system's path by executing the following command:
 
 <pre><code>% echo $PATH
 /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin</code></pre>
@@ -277,7 +277,7 @@ Microsoft also offer a WedDriver binary for <a href="https://www.microsoft.com/e
  in that they are both supported by third parties.
  Consequently you need to set up a dependency to
  the <code>com.opera:operadriver</code> artifact (if using Maven)
- or <a href=//www.seleniumhq.org/download/>download a prebuilt standalone server JAR</a>
+ or <a href=//www.seleniumhq.org/download/>download a prebuilt standalone server JAR.</a>
  As long as the JAR is available on your classpath, you should be good to go.
 
 <p>If you use Python or Ruby as your language of choice
@@ -459,7 +459,7 @@ assert el.text == "Hello from JavaScript!"</code></pre>
  The condition is called with a certain frequency
  until the timeout of the wait is elapsed.
  This means that for as long as the condition returns a falsy value,
- it will keep trying and keep waiting.
+ it will keep trying and waiting.
 
 <p>Since explicit waits allow you to wait for a condition to occur,
  they make a good fit for synchronising the state between the browser and its DOM,
