--- a/remote.html
+++ b/remote.html
@@ -32,7 +32,7 @@ Once you have downloaded selenium-server-standalone-{VERSION}.jar,
 place it on the computer with the browser you want to test. Then, from
 the directory with the jar, run the following:
 
-<pre><code>java -jar selenium-server-standalone-{VERSION}.jar</code></pre>
+<pre><code>$ java -jar selenium-server-standalone-{VERSION}.jar</code></pre>
 
 
 <h3>Considerations for running the server</h3>
@@ -51,7 +51,7 @@ stop/quit every now and then (or increase memory with -Xmx jvm option).
 
 The server has two different timeouts, which can be set as follows:
 
-<pre><code>java -jar selenium-server-standalone-{VERSION}.jar -timeout=20 -browserTimeout=60</code></pre>
+<pre><code>$ java -jar selenium-server-standalone-{VERSION}.jar -timeout=20 -browserTimeout=60</code></pre>
 
 <dl>
  <dt>browserTimeout</dt>
