--- a/start.html
+++ b/start.html
@@ -145,7 +145,7 @@ one search:
 <pre><code class=java>driver.findElement(By.cssSelector("#cheese #cheddar"));</code></pre>
 
 
-<h3>Locating ultiple elements</h3>
+<h3>Locating multiple elements</h3>
 
 <p>It's possible that the document we are working with may turn out to have an
 ordered list of the cheese we like the best:
