--- a/quick.html
+++ b/quick.html
@@ -28,20 +28,20 @@ same application which you push live.
 
 <h2>Selenium Grid</h2>
 
-<p> Soon after development of WebDriver tests you may face need of
- running your test on multiple combinations of browser/operating
+<p> Soon after development of WebDriver tests you may face the need to
+ run your tests on multiple combinations of browser/operating
  system. This is where <em><a href=grid.html>Selenium Grid</a></em>
- comes to rescue.
+ comes to the rescue.
 
 
 <h2>Selenium IDE</h2>
 
 <p><em><a href=ide.html>Selenium IDE</a></em>, is a
- firefox plugin which can be used to record test steps on a firefox
+ firefox extension  which can be used to record test steps on a firefox
  browser. Selenium IDE can be used to generate <i>quick and dirty</i>
  test code and convert in a variety of programming languages (i.e. c#,
  java, python and ruby). Given the maintainability of code generated
- through Selenium IDE, it is not recommended to use it for any thing
+ through Selenium IDE, it is not recommended to use it for anything
  more than getting acquainted with element locators or generating
  <i>throw away code</i>. We are sure that once you get used to
  WebDriver API then you will never use Selenium IDE.
@@ -52,14 +52,16 @@ same application which you push live.
 <p><em>Selenium Remote Control</em>, is also known
  as Selenium 1. Selenium RC was the most prominent Selenium tool
  before the advent of Selenium WebDriver. Selenium RC would use a
- proxy server and inject java script in browser to be able to control
- it. Given the intrusive nature Selenium RC had on browser,
- you were never sure if you are pushing the same application live what
- you tested.
+ proxy server and inject javascript in browser to be able to control
+ it. Given the intrusive nature Selenium RC had on the browser,
+ you were never sure if you are pushing the same application live that
+ you had tested.
 
 <p>It is currently possible to run older RC tests using Selenium 3, by
- including the <em>leg-rc</em> package in your project, which attempts
- to provide an RC like API implemented with WebDriver. It is likely that
- leg-rc will be discontinued in the future, so efforts should be made to
- <a href=rctowd.html>migrate</a> fully to WebDriver. It is highly
- unrecommended to start any new project using Selenium RC currently.
+ including the <em>leg-rc</em> package in your project, which implements
+ RC's interfaces using WebDriver. Leg-rc acts as a stop gap for anyone
+ who have not yet moved to WebDriver, with the main goal being
+ compatibility. Those looking for the best support and latest features
+ are encouraged to <a href=rctowd.html>migrate</a> fully to WebDriver.
+ It is strongly recommended to start any new project using Selenium
+ WebDriver APIs.
