Fixed some grammatical issues

--- a/attr.html
+++ b/attr.html
@@ -16,7 +16,7 @@
 <p>Every effort has been made to make this documentation
  as complete and as accurate as possible,
  but no warranty or fitness is implied.
- The information provided is on as “as-is” basis.
+ The information provided is on an “as-is” basis.
  The authors and the publisher shall have
  neither liability nor responsibility to any person or entity
  with respect to any loss or damages arising
