--- a/grid.html
+++ b/grid.html
@@ -102,7 +102,7 @@
 
 <h2>Rolling your own grid</h2>
 
-<p>To use Selenium Grid
+<p>To use Selenium Grid,
  you must maintain your own infrastructure for the nodes.
  Without this infrastructure, Grid will not function.
  Many organizations use IaaS providers
@@ -136,7 +136,7 @@
 
 <p>The hub is the central point that will receive test requests
  and distribute them to the right nodes.
- The distribution is done on capabilities basis,
+ The distribution is done on a capabilities basis,
  meaning a test requiring a set of capabilities
  will only be distributed to nodes offering that set or subset of capabilities.
 
