--- a/quick.html
+++ b/quick.html
@@ -16,25 +16,25 @@
 
 <h2>WebDriver</h2>
 
-<p><em><a href=wd.html>WebDriver</a></em>, is also known as Selenium
+<p><em><a href=wd.html>WebDriver</a></em> is also known as Selenium
 2. If you are beginning with desktop website test automation then you
 are going to be using WebDriver APIs. WebDriver uses browser
 automation APIs provided by browser vendors to control browser and
-run tests. This is as if real user is operating the browser. Since
+run tests. This is as if a real user is operating the browser. Since
 WebDriver does not require its API to be compiled with application
-code hence it is not intrusive in nature. Hence you are testing the
+code, it is not intrusive in nature. Hence, you are testing the
 same application which you push live.
 
 
 <h2>Selenium Remote Control</h2>
 
-<p><em><a href=rc.html>Selenium Remote Control</a></em>, is also known
+<p><em><a href=rc.html>Selenium Remote Control</a></em> is also known
 as Selenium 1. Selenium RC was the most prominent Selenium tool
 before the advent of Selenium WebDriver. Selenium RC would use a
-proxy server and inject java script in browser to be able to control
-it. Given the intrusive nature Selenium RC had on browser,
-you were never sure if you are pushing the same application live what
-you tested. Selenium 2 APIs yet contain Selenium RC APIs but
+proxy server and inject JavaScript into a browser to be able to control
+it. Given the intrusive nature Selenium RC had on a browser,
+you could never be sure if what you were testing was the same as 
+the application you wanted to push live. Selenium 2 APIs yet contain Selenium RC APIs but
 Selenium 3 would completely get rid of Selenium RC APIs. If you are
 still using Selenium RC then you must
 <em><a href=rctowd.html>migrate</a></em> to Selenium WebDriver.
@@ -42,20 +42,20 @@ still using Selenium RC then you must
 
 <h2>Selenium IDE</h2>
 
-<p><em><a href=ide.html>Selenium IDE</a></em>, is a
-firefox plugin which can be used to record test steps on a firefox
-browser. Selenium IDE can be used to generate <i>quick and dirty</i>
- test code and convert in a variety of programming languages (i.e. c#,
-java, python and ruby). Given the maintainability of code generated
-through Selenium IDE, it is not recommended to use it for any thing
+<p><em><a href=ide.html>Selenium IDE</a></em> is a
+Firefox plugin which can be used to record test steps in Firefox itself. 
+Selenium IDE can be used to generate <i>quick and dirty</i>
+ test code in a variety of programming languages (i.e. C#,
+Java, Python, and Ruby). Given the maintainability of code generated
+through Selenium IDE, it is not recommended to use it for anything
 more than getting acquainted with element locators or generating
-<i>throw away code</i>. We are sure that once you get used to
-WebDriver API then you will never use Selenium IDE.
+<i>throw away code</i>. We're sure that once you get used to the
+WebDriver API, you will never use Selenium IDE.
 
 
 <h2>Selenium Grid</h2>
 
-<p> Soon after development of WebDriver tests you may face need of
-running your test on multiple combinations of browser/operating
-system. This is where <em><a href=grid.html>Selenium Grid</a></em>
-comes to rescue.
+<p> Soon after development of WebDriver tests, you may face a need of
+running your tests on multiple browser and operating system combinations.
+This is where <em><a href=grid.html>Selenium Grid</a></em>
+comes to the rescue.
