--- a/intro.html
+++ b/intro.html
@@ -60,8 +60,7 @@
  The surrounding infrastructure provided under the Selenium umbrella
  gives you the tools to put together
  your own <a href=grid.html>grid of browsers</a>
- so tests can be run on different browsers,
- multiple operating systems,
+ so tests can be run on different browsers and multiple operating systems
  across a range of machines.
 
 <p>Imagine a bank of computers in your server room or data centre
@@ -101,7 +100,7 @@
 
 <h3>History</h3>
 
-<p>When Selenium 1 was released in 2004
+<p>When Selenium 1 was released in 2004,
  it was out of the necessity to reduce time spent
  manually verifying consistent behaviour in the front-end of a web application.
  It made use of what tools were available at the time,
@@ -111,14 +110,14 @@
 <p>Whilst JavaScript is a good tool to let you introspect the properties of the DOM
  and to do certain client-side observations that you would otherwise not be able to do,
  it falls short on the ability to naturally replicate a user's interactions
- as if the mouse and keyboard is being used.
+ as if the mouse and keyboard are being used.
 
-<p>Since then Selenium has grown and matured a lot,
+<p>Since then, Selenium has grown and matured a lot,
  into a tool widely used by many&mdash;if not most&mdash;of
  the largest organisations around the world.
  Selenium has gone from a homebrewed test automation toolkit developed at Thoughtworks
  for a niché audience and a specific use case,
- to become the world's <em>de facto</em> browser automation library.
+ to the world's <em>de facto</em> browser automation library.
 
 <p>Just as Selenium RC made use of the tools of the trade available at the time,
  <a href=wd.html>Selenium WebDriver</a> drives that tradition on by taking
@@ -135,8 +134,8 @@
  Odds are good that, at some point, if you're working on a complex web application,
  you will need to open a browser and actually test it.
 
-<p>Functional end-user tests such as Selenium tests are however expensive to run.
- Furthermore they typically require substantial infrastructure
+<p>Functional end-user tests such as Selenium tests are expensive to run, however.
+ Furthermore, they typically require substantial infrastructure
  to be in place to be run effectively.
  It's a good rule to always ask yourself if what you want to test
  can be done using more lightweight test approaches such as unit tests
@@ -156,14 +155,14 @@
  one to two operations should be enough much of the time.
  Browser automation has the reputation of being “flaky”,
  but in reality that is because users frequently demand too much of it.
- In later chapters we will return to techniques you can use
+ In later chapters, we will return to techniques you can use
  to mitigate apparent intermittent problems in tests,
  in particular on how to <a href=wd.html#waits>overcome race conditions</a>
  between the browser and WebDriver.
 
-<p>By keeping your tests short,
- and by using the web browser only when you have absolutely no alternative,
- you can have many tests, with minimal flake.
+<p>By keeping your tests short
+ and using the web browser only when you have absolutely no alternative,
+ you can have many tests with minimal flake.
 
 <p>A distinct advantage of Selenium tests
  are their inherent ability to test all components of the application,
@@ -176,7 +175,7 @@
 
 <p>As mentioned before, Selenium tests can be expensive to run.
  To what extent depends on the browser you're running the tests against,
- but historically browsers' behaviour have varied so much that it has often
+ but historically browsers' behaviour has varied so much that it has often
  been a stated goal to cross-test against multiple browsers.
 
 <p>Selenium allows you to run the same instructions against multiple browsers
@@ -208,7 +207,8 @@
  Doing so will result in a test that
  (a) takes a long time,
  (b) will be subject to some common issues around page rendering timing issues, and
- (c) if it fails, will not give you a concise, “glanceable” method for diagnosing what went wrong.
+ (c) is such that if it fails, 
+ it won't give you a concise, “glanceable” method for diagnosing what went wrong.
 
 <p>The preferred strategy for testing this scenario would be
  to break it down to a series of independent, speedy tests,
@@ -248,21 +248,24 @@
 <p>If each test for each workflow begins with the creation of a user account,
  many seconds will be added to the execution of each test.
  Calling an API and talking to a database are quick,
- “headless” operations, that don't require the expensive process of
+ “headless” operations that don't require the expensive process of
  opening a browser, navigating to the right pages,
  clicking and waiting for the forms to be submitted, etc.
 
 <p>Ideally, you can address this set-up phase in one line of code,
  which will execute before any browser is launched:
 
-<pre><code class=java>// Create a user who has read-only permissions--they can configure a unicorn, but they do not have payment
-// information set up, nor do they have administrative privileges.
-// At the time the user is created, its email address and password are randomly generated--you don't even need to know them
-User user = UserFactory.createCommonUser(); //This method is defined elsewhere
+<pre><code class=java>// Create a user who has read-only permissions--they can configure a unicorn,
+// but they do not have payment information set up, nor do they have
+// administrative privileges. At the time the user is created, its email
+// address and password are randomly generated--you don't even need to
+// know them.
+User user = UserFactory.createCommonUser(); //This method is defined elsewhere.
 
-// Log in as this user
-// Logging in on this site takes you to your personal "My Account" page, so the AccountPage object
-// is returned by the loginAs method, allowing you to then perform actions from the AccountPage
+// Log in as this user.
+// Logging in on this site takes you to your personal "My Account" page, so the
+// AccountPage object is returned by the loginAs method, allowing you to then
+// perform actions from the AccountPage.
 AccountPage accountPage = loginAs(user.getEmail(), user.getPassword());</code></pre>
 
 <p>As you can imagine, the <code>UserFactory</code> can be extended
@@ -296,23 +299,27 @@ AccountPage accountPage = loginAs(user.getEmail(), user.getPassword());</code></
  You want to write your code like the user trying to solve their problem.
  Here is one way of doing this (continuing from the previous example):
 
-<pre><code class=java>// The Unicorn is a top-level Object--it has attributes, which are set here. This only stores the values, it does not
-// fill out any web forms or interact with the browser in any way
+<pre><code class=java>// The Unicorn is a top-level Object--it has attributes, which are set here. 
+// This only stores the values; it does not fill out any web forms or interact
+// with the browser in any way.
 Unicorn sparkles = new Unicorn("Sparkles", UnicornColors.PURPLE, UnicornAccessories.SUNGLASSES, UnicornAdornments.STAR_TATTOOS);
 
-// Since we're already "on" the account page, we have to use it to get to the actual
-// place where you configure unicorns. Calling the "Add Unicorn" method takes us there
+// Since we're already "on" the account page, we have to use it to get to the
+// actual place where you configure unicorns. Calling the "Add Unicorn" method
+// takes us there.
 AddUnicornPage addUnicornPage = accountPage.addUnicorn();
 
-// Now that we're on the AddUnicornPage, we will pass the "sparkles" object to its createUnicorn() method. This method will
-// take Sparkles' attributes, fill out the form, and click submit
+// Now that we're on the AddUnicornPage, we will pass the "sparkles" object to
+// its createUnicorn() method. This method will take Sparkles' attributes,
+// fill out the form, and click submit.
 UnicornConfirmationPage unicornConfirmationPage = addUnicornPage.createUnicorn(sparkles);</code></pre>
 
 <p>Now that you've configured your unicorn,
- you need to move on to step 3: Making sure it actually worked.
+ you need to move on to step 3: making sure it actually worked.
 
-<pre><code class=java>// The exists() method from UnicornConfirmationPage will take the Sparkles object--a specification of the attributes
-// you want to see, and compare them with the fields on the page
+<pre><code class=java>// The exists() method from UnicornConfirmationPage will take the Sparkles 
+// object--a specification of the attributes you want to see, and compare
+// them with the fields on the page.
 Assert.assertTrue("Sparkles should have been created, with all attributes intact", unicornConfirmationPage.exists(sparkles));</code></pre>
 
 <p>Note that the tester still hasn't done anything but talk about unicorns in this code–
@@ -330,7 +337,7 @@ Assert.assertTrue("Sparkles should have been created, with all attributes intact
  you will want to keep going through your workflows with the fewest browser-facing steps possible.
  Your next workflow will involve adding a unicorn to the shopping cart.
  You will probably want many iterations of this test in order to make sure the cart is keeping its state properly:
- Are there more than one unicorns in the cart before you start?
+ Is there more than one unicorn in the cart before you start?
  How many can fit in the shopping cart?
  If you create more than one with the same name and/or features, will it break?
  Will it only keep the existing one or will it add another?
@@ -338,7 +345,7 @@ Assert.assertTrue("Sparkles should have been created, with all attributes intact
 <p>Each time you move through the workflow,
  you want to try to avoid having to create an account,
  login as the user, and configure the unicorn.
- Ideally you'll be able to create an account
+ Ideally, you'll be able to create an account
  and pre-configure a unicorn via the API or database.
  Then all you have to do is log in as the user, locate Sparkles,
  and add her to the cart.
@@ -368,8 +375,7 @@ Assert.assertTrue("Sparkles should have been created, with all attributes intact
  If not, feel free to open one!
 
 <p>Many members of the community frequent
- the <em>#selenium</em> IRC channel at <a href=//freenode.net/>irc.freenode.net</a>
- Feel free to drop in and ask questions
+ the <em>#selenium</em> IRC channel at <a href=//freenode.net/>irc.freenode.net</a>. Feel free to drop in and ask questions
  and if you get help which you think could be of use within these documents,
  be sure to add your contribution!
  We can update these documents,
