--- a/start.html
+++ b/start.html
@@ -22,7 +22,7 @@
  take responsibility for the implementation for their browsers.
  Selenium makes use of these third party drivers where possible,
  but also provides its own drivers maintained by the project
- for the cases where this is not a reality.
+ for the cases when this is not a reality.
 
 <p>The Selenium framework ties all of these pieces together
  through a user-facing interface that enables the different browser backends
@@ -50,7 +50,7 @@
 
 <h2>Specialised browsers</h2>
 
-<p>There are also a set of specialized browsers out there
+<p>There is also a set of specialized browsers out there
  typically used in development environments.
  We can make use of some of these browsers for automation purposes also,
  and Selenium ties in support for the following specialized drivers:
@@ -82,9 +82,9 @@
  <tr>
  <th>Browser</th><th>Latest version</th><th></th><th></th><th></th></tr>
  <tr>
-  <td><a href="//sites.google.com/a/chromium.org/chromedriver/">Google Chrome driver</a></td>
-  <td><a href="//chromedriver.storage.googleapis.com/index.html">2.22</a> - 2016-06-06</td>
-  <td><a href="//chromedriver.storage.googleapis.com/2.22/notes.txt">changelog</a></td>
+  <td><a href="//sites.google.com/a/chromium.org/chromedriver/">Google ChromeDriver</a></td>
+  <td><a href="//chromedriver.storage.googleapis.com/index.html">2.29</a> - 2017-04-04</td>
+  <td><a href="//chromedriver.storage.googleapis.com/2.29/notes.txt">changelog</a></td>
   <td><a href="//bugs.chromium.org/p/chromedriver/issues/list">issues</a></td>
   <td><a href="//github.com/SeleniumHQ/selenium/wiki/ChromeDriver">wiki</a></td>
  </tr>
@@ -94,7 +94,7 @@
 <h2>Locating elements</h2>
 
 
-<h3>Locating One Element</h3>
+<h3>Locating one element</h3>
 
 <p>One of the most fundamental techniques to learn when using WebDriver is
 how to find elements on the page. WebDriver offers a number of built-in selector
@@ -121,7 +121,7 @@ WebElement cheddar = cheese.findElement(By.id("cheddar"));</code></pre>
 
 <p>You can do this because both the <em>WebDriver</em> and <em>WebElement</em> types
 implement the <em><a href=//seleniumhq.github.io/selenium/docs/api/java/org/openqa/selenium/SearchContext.html>SearchContext</a></em>
-interface. In WebDriver this is known as a <em>role-based interface</em>.
+interface. In WebDriver, this is known as a <em>role-based interface</em>.
 Role-based interfaces allow you to determine whether a particular
 driver implementation supports a given feature. These interfaces are
 clearly defined and try to adhere to having only a single role of
@@ -137,7 +137,7 @@ separate commands to be issued to the browser; first searching the DOM
 for an element with ID “cheese”, then a search for “cheddar” in a
 narrowed context.
 
-<p>To improve the performance slightly we should try to use a more
+<p>To improve the performance slightly, we should try to use a more
 specific locator: WebDriver supports looking up elements
 by CSS locators, allowing us to combine the two previous locators into
 one search:
@@ -223,7 +223,7 @@ empty list will be returned.
 
 <h3>Tips on using selectors</h3>
 
-<p>In general, if HTML ID's are available, unique, and consistently
+<p>In general, if HTML IDs are available, unique, and consistently
 predictable, they are the preferred method for locating an element on
 a page.  They tend to work very quickly, and forego much processing
 that comes with complicated DOM traversals.
@@ -256,7 +256,7 @@ your search, the better.
 <pre><code class=java>String name = "Charles";
 driver.findElement(By.name("name")).sendKeys(name);</code></pre>
 
-<p>Some web application use javascript libraries to add drag-and-drop
+<p>Some web applications use JavaScript libraries to add drag-and-drop
 functionality. The following is a basic example of dragging one
 element onto another element:
 
