--- a/remote.html
+++ b/remote.html
@@ -5,7 +5,7 @@
 <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
 <link rel=prev href=wd.html title=WebDriver>
-<link rel=next href=best.html title="Best Practices">
+<link rel=next href=guidelines.html title="Best Practices">
 <script src=docs.js></script>
 
 <h1>Remote WebDriver</h1>
