--- a/worst.html
+++ b/worst.html
@@ -4,7 +4,7 @@
 <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
-<link rel=prev href=best.html title="Best practices">
+<link rel=prev href=guidelines.html title="Best practices">
 <link rel=next href=grid.html title=Grid>
 <script src=docs.js></script>
 
