Removed text instances of 'best practice', changed to 'guidelines and recommendations'.

--- a/guidelines.html
+++ b/guidelines.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset=utf-8>
-<title>Best practices</title>
+<title>Guidelines and Recommendations</title>
 <link rel="icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel="shortcut icon" href="favicon.ico" type="image/vnd.microsoft.icon">
 <link rel=stylesheet href=se.css>
@@ -8,7 +8,7 @@
 <link rel=next href=worst.html title="Worst Practices">
 <script src=docs.js></script>
 
-<h1>Best practices</h1>
+<h1>Guidelines and Recommendations</h1>
 
 <p>Functional testing is difficult to get right for many reasons.
  As if application state, complexity, and dependencies don't make testing difficult enough,
@@ -17,7 +17,7 @@
 
 <p>Selenium provides tools to make functional user interaction easier,
  but doesn't help you write well-architected test suites.
- In this chapter we offer advice, or best practices if you will,
+ In this chapter we offer advice, guidelines, and recommendations.
  on how to approach functional web page automation.
 
 <p>This chapter records software design patterns popular
