--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ search_box.submit()</code></pre>
    <li><a href=remote.html#the_remotewebdriver_server>The RemoteWebDriver server</a>
    <li><a href=remote.html#running_remotewebdriver_client>Running RemoteWebDriver client</a>
   </ul></li>
- <li><a href=guidelines.html#best_practices>Best practices</a>
+ <li><a href=guidelines.html#best_practices>Guidelines and Recommendations</a>
   <ul>
    <li><a href=guidelines.html#page_object_models>Page object models</a>
    <li><a href=guidelines.html#domain_specific_language>Domain Specific Language</a>
