--- a/start.html
+++ b/start.html
@@ -243,7 +243,7 @@ frequently multiple elements of the same tag present on the page.
 This is mostly useful when calling the <em>findElements(By)</em> method which
 returns a collection of elements.
 
-<p>The recommended best practice is to keep your locators as compact and
+<p>The recommendation is to keep your locators as compact and
 readable as possible.  Asking WebDriver to traverse the DOM structure
 is an expensive operation, and the more you can narrow the scope of
 your search, the better.
