Added para on avoiding 'best practices'.

--- a/guidelines.html
+++ b/guidelines.html
@@ -10,6 +10,12 @@
 
 <h1>Guidelines and Recommendations</h1>
 
+<p>A note on "Best Practices": We've intentionally avoided the phrase "Best
+Practices" in this documentation. No one approach works for all situations. 
+We prefer the idea of "Guidelines and Recommendations." We encourage
+you to read through these and thoughtfully decide what approaches 
+will work for you in your particular environment.
+
 <p>Functional testing is difficult to get right for many reasons.
  As if application state, complexity, and dependencies don't make testing difficult enough,
  dealing with browsers – and especially cross-browser incompatibilities –
