--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ search_box.submit()</code></pre>
  <li><a href=java.html#the_java_support_package>The Java support package</a>
   <ul>
    <li><a href=java.html#working_with_colours>Working with colours</a>
-   <li><a href=java.html#working_with>Working with</a>
+   <li><a href=java.html#working_with>Working with select elements</a>
    <li><a href=java.html#mouse_and_keyboard_actions_in_detail>Mouse and keyboard actions in detail</a>
    <li><a href=java.html#working_with_web_elements>Working with web elements</a>
   </ul></li>
